--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Boilerplate | MOTW 2015</title>
+  <title>Hello! | MOTW 2015</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
@@ -12,7 +12,11 @@
 </head>
 
 <body>
-  <h1>Hello World!</h1>
+  <div class="motw-center">
+    <h1>Musicking on the Web!</h1>
+    <img src="assets/motw-logo.png">
+    <h2>Hello World!</h2>
+  </div>
 
   <script src="scripts/main.js"></script>
 </body>
