fixed examples index

--- a/src/examples/index.html
+++ b/src/examples/index.html
@@ -17,10 +17,10 @@
   <div class="example-main">
     
     <dt><a href="tonebars/">Tone Bars</a></dt>
-    <dd>Custom Oscillator</dd>
+    <dd>Waveform Construction based on Fourier Series</dd>
 
-    <dt>Filters</dt>
-    <dd>Nature of one-pole filter</dd>
+    <dt><a href="fmsynth/">FM Synthesis</a></dt>
+    <dd>Basic FM Synthesis Demo</dd>
 
   </div>
 
