added spiral core into motw-app

--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,14 @@
 <!doctype html>
 <html>
-
 <head>
-  <title>Hello! | MOTW 2015</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Main | MOTW 2015</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
-  <!-- <script src="bower_components/spiral/spiral.min.js"></script> -->
-  <link rel="shortcut icon" href="assets/favicon.ico">
-  <link rel="stylesheet" href="css/base.css">
+  <link rel="import" href="assets/motw-app.html">
 </head>
-
 <body>
-  <div class="motw-center">
-    <h1>Musicking on the Web!</h1>
-    <img src="assets/motw-logo.png">
-    <h2>Hello World!</h2>
-  </div>
-
-  <script src="scripts/main.js"></script>
+  <motw-app></motw-app>
 </body>
-
 </html>
