--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
   <link rel="import" href="assets/motw-app.html">
 </head>
-<body>
+<body class="unresolved fullbleed">
   <motw-app></motw-app>
 </body>
 </html>
