new app structure

--- a/tutorials/assets/motw-doc-header.html
+++ b/tutorials/assets/motw-doc-header.html
@@ -1,9 +1,9 @@
 <!-- MOTW document common includes -->
 <link rel="shortcut icon" href="favicon.ico">
-<link rel="import" href="bower_components/polymer/polymer.html">
-<link rel="import" href="bower_components/paper-styles/paper-styles.html"></script>
-<link rel="stylesheet" href="assets/motw-doc.css">
+<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/paper-styles/paper-styles.html"></script>
+<link rel="stylesheet" href="../assets/motw-doc.css">
 
 <!-- Spiral -->
-<script src="bower_components/spiral/spiral.min.js"></script>
-<link rel="import" href="bower_components/spiral-knob/spiral-knob.html"></script>
+<script src="../bower_components/spiral/spiral.min.js"></script>
+<link rel="import" href="../bower_components/spiral-knob/spiral-knob.html"></script>
