--- a/tutorials/subtractive-step2.html
+++ b/tutorials/subtractive-step2.html
@@ -10,8 +10,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <script src="../bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
-  <link rel="import" href="../assets/motw-doc-header.html">
+  <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
+  <link rel="import" href="assets/motw-doc-header.html">
 </head>
 
 <body>
