adding new branch

--- a/tutorials/assets/motw-app.html
+++ b/tutorials/assets/motw-app.html
@@ -1,7 +1,7 @@
 <!--
   <motw-app>
-  @description spontaneous app-shell element for motw-2015 examples and tutorials.
-  @version 0.0.1
+  @description A spontaneous app shell for motw-2015 tutorials.
+  @version 0.0.2
   @author Hongchan Choi (hongchan.choi@gmail.com)
 -->
 
@@ -91,7 +91,7 @@
   </style>
 
   <template>
-    <paper-drawer-panel drawer-width="270px" disable-swipe="true" disable-edge-swipe="true">
+    <paper-drawer-panel drawer-width="240px" disable-swipe="true" disable-edge-swipe="true">
       <div drawer class="vertical layout">
         <div class="motw-title-bar">MOTW 2015</div>
         <div class="flex">
