--- a/tutorials/monophony.html
+++ b/tutorials/monophony.html
@@ -23,7 +23,7 @@
     <ul>
       <li>Change <strong>Amp</strong> knob to hear something.</li>
       <li>Press keys to change the pitch: <code>[ a, w, s, e, d, f, t, g, y, h, j, k ]</code></li>
-      <li>Change <strong>Cutoff</strong> and <strong>Cutoff</strong> knobs to change the tone.</li>
+      <li>Change <strong>Cutoff</strong> and <strong>Reso</strong> knobs to change the tone.</li>
     </ul>
   </div>
 
