--- a/tutorials/workshop-materials.html
+++ b/tutorials/workshop-materials.html
@@ -16,6 +16,12 @@
     <h1>Workshop Materials</h1>
     <br><br>
 
+    <h2>Slides</h2>
+    <ul>
+      <li><a href="resources/motw-2015-lecture-1.pdf" target="_blank">Lecture Slide 1 (PDF)</a></li>
+      <li><a href="resources/motw-2015-lecture-2.pdf" target="_blank">Lecture Slide 2 (PDF)</a></li>
+    </ul>
+
     <h2>Codes</h2>
     <ul>
       <li><a href="https://github.com/hoch/motw-2015" taget="_blank">
