--- a/tutorials/ui-slida-main.html
+++ b/tutorials/ui-slida-main.html
@@ -8,8 +8,6 @@
 <head>
   <title>Tutorial: UI | MOTW 2015</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
   <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
   <link rel="import" href="assets/motw-doc-header.html">
   <link rel="import" href="ui-slida.html">
@@ -21,16 +19,11 @@
     <h1>Your Own Slider</h1>
     <h2>motw-slida</h2>
     <p class="description">Create your own slider UI element for the parameter control.</p>
-    <ol>
-      <li>Item 1</li>
-      <li>Item 2</li>
-      <li>Item 3</li>
-    </ol>
   </div>
 
   <div class="workspace">
     <motw-slida id="slider1" label="Move Me" value="440" min-value="220" max-value="880" precision="0"></motw-slida>
-    <motw-slida id="slider2" label="Nudge Me" value="0.25" min-value="0.0" max-value="1.0"></motw-slida>
+    <motw-slida id="slider2" label="Me too" value="0.25" min-value="0.0" max-value="1.0"></motw-slida>
   </div>
 
   <div id="code-viewer">
