--- a/tutorials/midi-drumpad.html
+++ b/tutorials/midi-drumpad.html
@@ -1,5 +1,5 @@
 <!--
-  Tutorial 3-2: MIDI Drum Pad
+  Tutorial 3-2: MIDI Drum Pad (WIP)
 -->
 
 <!doctype html>
@@ -8,8 +8,6 @@
 <head>
   <title>Tutorial: MIDI | MOTW 2015</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
   <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
   <link rel="import" href="assets/motw-doc-header.html">
   <style>
